event emiiter, input, output added

--- a/poc/src/app/child/child.component.html
+++ b/poc/src/app/child/child.component.html
@@ -1,1 +1,6 @@
-<p>child works!</p>
+<ol>
+  <li *ngFor="let food of foodArr, let i = index">
+    {{food}}
+    <button (click)="deleteItem(i)">Delete</button>
+  </li>
+</ol>
