child 2 and 3 updated

--- a/poc/src/app/app.component.html
+++ b/poc/src/app/app.component.html
@@ -1,4 +1,7 @@
-<router-outlet></router-outlet>
-
 Enter Food Name<input (keyup.enter)="addFood(foodInput.value)" #foodInput>
-<app-child [foods]="foods" (deleteEvt)="removeFood($event)"></app-child>
+
+<!--<app-child (deleteEvt)="removeFood($event)"></app-child>-->
+<!--<app-child></app-child>-->
+<app-child1></app-child1>
+<app-child2></app-child2>
+<app-child3></app-child3>
