--- a/poc/src/app/child/child.component.html
+++ b/poc/src/app/child/child.component.html
@@ -1,6 +1,6 @@
 <ol>
-  <li *ngFor="let food of foodArr, let i = index">
+  <li *ngFor="let food of foods, let i = index">
     {{food}}
-    <button (click)="deleteItem(i)">Delete</button>
+    <!--    <button (click)="deleteItem(i)">Delete</button>-->
   </li>
 </ol>
